--- a/ChaNote/ChaNote/ChaNote.csproj
+++ b/ChaNote/ChaNote/ChaNote.csproj
@@ -35,7 +35,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>8pksn-sfatf-001.ico</ApplicationIcon>
+    <ApplicationIcon>花.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -98,7 +98,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="8pksn-sfatf-001.ico" />
+    <Resource Include="花.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
